feat(carddemo-app): translate JCL TRANREPT to TransactionReportApp composition root
Translate app/jcl/TRANREPT.jcl into a Java 25 main class wired to the
CBTRN03C use case. The 3-step job is implemented as:

  * STEP05R (REPROC): backup the TRANSACT KSDS to BKUP(+1) GDG via
    Files.copy(); RC_NO_INPUT (12) when source is absent.
  * STEP05R (SORT):   read the BKUP file as 350-byte records, filter by
    INCLUDE COND (TRAN-PROC-DT GE PARM-START-DATE AND LE PARM-END-DATE)
    with byte-level US-ASCII comparison at offset 304, sort ascending
    by TRAN-CARD-NUM (offset 262, 16 bytes, unsigned byte compare),
    and write DALY(+1) GDG generation.
  * STEP10R:          write DATEPARM (80-byte fixed-width record), wire
    CbTrn03C with file-backed repositories via constructor injection,
    invoke its run() method through DateParamsSource/ReportSink, and
    write TRANREPT(+1) GDG generation plus a friendly path copy.

Key contracts preserved verbatim (AAP §0.7.1):
  * PARM-START-DATE  = '2022-01-01'
  * PARM-END-DATE    = '2022-07-06'
  * GDG dataset bases AWS.M2.CARDDEMO.TRANSACT.BKUP/DALY and TRANREPT
  * STEP05R name duplication (REPROC + SORT) — logged as separate phases
  * SYMNAMES TRAN-CARD-NUM at 1-indexed pos 263 → 0-indexed offset 262
  * SYMNAMES TRAN-PROC-DT  at 1-indexed pos 305 → 0-indexed offset 304

Java 25 features (per AAP §0.7.3):
  * @CobolProgram traceability annotation citing CBTRN03C
  * BATCH_CTX as ScopedValue<BatchRunContext> — replaces ThreadLocal
    entirely (JEP 506 Final)
  * import module java.base — JEP 511 Final
  * Pattern-matching switch on Integer with no default branch — RC bands
  * LocalDate from java.time — never java.util.Date / Calendar
  * java.nio.file for all I/O — never java.io.File
  * Plain Java constructor injection — no Spring container

PARM resolution precedence: args[0|1] > sysprop > env > default.

Validation:
  * mvn -B clean verify passes across all 7 modules
  * Total 126 tests, 0 failures, 0 errors, 7 skipped